--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         
         #layer_selector {
             position: fixed;
-            top: 200px;
+            top: 180px;
             right: 20px;
             padding: 0;
             font-family: 'Fira Sans', sans-serif;
@@ -272,8 +272,8 @@
             <a href="#close" class="cartodb-popup-close-button close">x</a>
             <div class="cartodb-popup-content-wrapper">
                 <div class="cartodb-popup-content">
-                    <p>This Fire Occurred In {{fire_year}}</p>
-                    <p>{{acres}} acres burned</p>
+                    <p>This fire occurred in {{fire_year}}</p>
+                    <p>with {{acres}} acres burned.</p>
                 </div>
             </div>
     </script>
@@ -439,7 +439,7 @@
                         user: 'owenjeff'
                     })
                     // fetch time range
-                sql.execute('select max(fire_year), min(fire_year) from fire_history_nrocky_1889_2003_1', function (data) {
+                sql.execute('select max(fire_year), min(fire_year) from fire_history_1', function (data) {
                     var range = data.rows[0];
                     var max = new Number(range.max)
                     var min = new Number(range.min)
@@ -460,7 +460,7 @@
                             var start = ui.values[0]
                             var end = ui.values[1]
                                 // build sql
-                            sublayer.setSQL("select * from fire_history_nrocky_1889_2003_1 where fire_year >= '" + start + "' and fire_year <= '" + end + "'");
+                            sublayer.setSQL("select * from fire_history_1 where fire_year >= '" + start + "' and fire_year <= '" + end + "'");
                             $('#loader').delay(5000).fadeOut();
                         }
                     });
